added option to the test suite JVM to allow these accesses to occur -- kind of a dirty fix but it works for now
Signed-off-by: Ethan Weaver <emw0022@mix.wvu.edu>